--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arknightsim",
+  "name": "vita_card",
   "version": "1.3.1",
   "description": "",
   "main": "index.html",
@@ -12,7 +12,7 @@
   "keywords": [
     "arknights"
   ],
-  "author": "lnp",
+  "author": "Nya-WSL",
   "license": "MIT",
   "devDependencies": {
     "@types/jquery": "^3.5.6",
