--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
@@ -32,4 +32,4 @@ jobs:
           BASE_BRANCH: master # The branch the action should deploy from.
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: dist # The folder the action should deploy.
-          BUILD_SCRIPT: npm install && npm run-script build
+          BUILD_SCRIPT: apt-get update && apt-get install jq && npm install && npm run-script build
